@@ -3,6 +3,7 @@
     * src/widgets/geda_separator.c: Utilize macro:
 
           * geda_get_widget_style
+          * geda_get_widget_window
 
 2020-06-04 Wiley E. Hill <wileyhill@gmail.com>
 
